--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/Karkh-Elizaveta/bpmnEditor#readme",
   "dependencies": {
-    "bpmn-js": "^1.3.0",
+    "body-parser": "^1.18.2",
+    "bpmn-js": "^0.26.6",
     "css-loader": "^0.28.11",
+    "dirty": "^1.1.0",
+    "express": "^4.16.3",
     "jquery": "^3.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
